# miles-memories

./: .gitignore  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
admin/: __init__.py
app/: bootstrap.py  db.py  destination_overrides.py  main.py  parks.py  schemas.py  settings.py  trip_admin.py
data/: nps_parks.json
database/: schema.sql
deploy/: DEPLOYMENT.md  env.production.example  run_step56.sh
deploy/nginx/: travel.navi-services.com.conf
deploy/systemd/: milesmemories.service
docs/: data-schema.md  garmin-mcp-setup.md  project-context.md  requirements.md  system-architecture.md  trip-detection-engine.md
ingestion/: __init__.py  common.py  garmin_parser.py  imports.py  location_takeout.py  photos_takeout.py
mcp_server/: __init__.py  garmin_server.py
publisher/: __init__.py
scripts/: auto_publish_multiday.py  build_garmin_trips.py  build_latest_trips_from_timeline.py  detect_trips.py  enrich_trip_leg_places.py  ingest_garmin.py  ingest_location.py  ingest_photos.py  rebuild_all_trip_segments.py  rebuild_trip_segments.py  refresh_recent_auto_trips.py  refresh_trip_detection.py  relink_garmin_activities.py  run_garmin_mcp.py  seed_nps_parks.py  set_destination_override.py  set_home.py  set_work.py
tests/: test_app_api.py  test_garmin_parser.py  test_location_takeout.py  test_trip_admin.py  test_trip_detector.py
trip_engine/: __init__.py  detector.py
