[project]
name = "milesmemories"
version = "0.1.0"
description = "Personal travel blog pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "psycopg[binary]>=3.2.0"
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0; python_version >= '3.10'"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "ingestion*", "trip_engine*", "publisher*", "admin*", "mcp_server*"]
